--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "coderflexx/laravisit": "^1.4",
         "guzzlehttp/guzzle": "^7.2",
         "hardevine/shoppingcart": "^3.2",
+        "intervention/image-laravel": "^1.3",
         "laravel/framework": "^10.10",
         "laravel/jetstream": "^4.1",
         "laravel/sanctum": "^3.3",
