--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,7 +2,7 @@
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
-
+AddType image/webp .webp
     RewriteEngine On
 
     # Handle Authorization Header
