--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "awssat/laravel-visits": "^6.0",
         "coderflexx/laravisit": "^1.4",
+        "endroid/qr-code": "^6.0",
         "guzzlehttp/guzzle": "^7.2",
         "hardevine/shoppingcart": "^3.2",
         "intervention/image-laravel": "^1.3",
