--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@alpinejs/persist": "^3.14.9",
         "@alpinejs/sort": "^3.14.1",
         "leaflet": "^1.9.4"
     }
